--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-shillelagh
 appdirs==1.4.4
 apsw==3.38.5.post1
 astroid==2.11.7
@@ -8,6 +7,7 @@ boto3==1.24.35
 botocore==1.27.35
 build==0.8.0
 cachetools==5.2.0
+cattrs==22.2.0
 certifi==2022.6.15
 cfgv==3.3.1
 charset-normalizer==2.1.0
@@ -28,6 +28,7 @@ iniconfig==1.1.1
 isort==5.10.1
 itsdangerous==2.1.2
 jmespath==1.0.1
+jsonpath==0.82
 jsonpath-python==1.0.6
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
@@ -59,8 +60,12 @@ PyYAML==6.0
 requests==2.28.1
 requests-cache==0.7.1
 requests-mock==1.9.3
+responses==0.22.0
+# Editable Git install with no remote (restDbApi==1.0.0)
+-e /Users/s0n02qm/practise/rest-db-api
 rsa==4.9
 s3transfer==0.6.0
+shillelagh==1.2.0
 six==1.16.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.39
@@ -68,6 +73,7 @@ tabulate==0.8.9
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.1
+types-toml==0.10.8.5
 typing_extensions==4.3.0
 url-normalize==1.4.3
 urllib3==1.26.10
@@ -76,5 +82,3 @@ wcwidth==0.2.5
 webencodings==0.5.1
 wrapt==1.14.1
 yarl==1.8.1
-responses
-pytest-cov
